# indoor_service

./: .gitignore  Door Opening.md  Installaion.md  Navigation.md  README.md  Self-Charging.md
docs/: AutoChargeTest.md  BuildRobot.md  DoorOpenTest.md  DoorOpening.md  Experiment.md  MBRL.md  Navigation.md  SelfCharging.md  TestStatistics_AutoCharge.md  TestStatistics_DoorOpen.md  TroubleShooting.md
ids_control/: .gitignore  CMakeLists.txt  package.xml
ids_control/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  device_control.yaml  local_costmap_params.yaml
ids_control/launch/: amcl_filter.launch  controller.launch  device_control.launch  gmapping.launch  gmapping_slam.launch  navigation.launch  object_detection.launch  path_planner.launch
ids_control/msg/: DoorHandleInfo.msg  WalloutletInfo.msg
ids_control/scripts/: camera.py  detect_doorhandle.py  detect_walloutlet.py
ids_description/: CMakeLists.txt  package.xml
ids_description/urdf/: base_jazzy.urdf.xacro  base_square.urdf.xacro  camera.urdf.xacro  frame.urdf.xacro  jazzy_base.urdf.xacro  jframe.urdf.xacro  jframe_l.urdf.xacro  jframe_r.urdf.xacro  jrobot.urdf.xacro  laser.urdf.xacro  mrobot.urdf.xacro  mrobot_1.urdf.xacro  mrobot_2.urdf.xacro  realsense.urdf.xacro  wheeler_1.urdf.xacro  wheeler_2.urdf.xacro
ids_detection/: CMakeLists.txt  package.xml
ids_detection/launch/: object_detection.launch
ids_detection/msg/: DetectionInfo.msg
ids_detection/scripts/: camera.py  detect_doorhandle.py  detect_walloutlet.py  detector.py  normal_estimator.py  object_detection.py  sne.py
ids_gazebo/: CMakeLists.txt  package.xml
ids_gazebo/launch/: indoor_service.launch  spawn_robot.launch
ids_gazebo/worlds/: office_room.world  office_room_0.world  office_room_1.world  office_room_2.world  office_room_3.world  office_room_4.world  office_room_5.world  office_room_6.world  office_room_7.world
ids_joy/: CMakeLists.txt  README.md  package.xml
ids_joy/launch/: logitech_gamepad.launch
ids_joy/src/: ids_joy_teleop.cpp
ids_learning/: CMakeLists.txt  package.xml
ids_task/: CMakeLists.txt  package.xml
ids_task/launch/: auto_charge.launch  build_map.launch  build_room_map.launch  record.launch  service.launch  visualization.launch  visualize.launch
ids_task/maps/: office.pgm
ids_task/scripts/: record.py  (+18 more)
ids_train/: CMakeLists.txt  package.xml
(+9225 files in other folders)
